WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264425
[IFC] inline-block child preceded by an inline child has incorrect positioning in vertical writing modes with a right-to-left direction
https://bugs.webkit.org/show_bug.cgi?id=264425
Summary
[IFC] inline-block child preceded by an inline child has incorrect positionin...
Aditya Keerthi
Reported
2023-11-08 10:50:02 PST
Created
attachment 468518
[details]
Reduction See test case and screenshot.
Attachments
Reduction
(188 bytes, text/html)
2023-11-08 10:50 PST
,
Aditya Keerthi
no flags
Details
Screenshot
(87.51 KB, image/png)
2023-11-08 10:50 PST
,
Aditya Keerthi
no flags
Details
longer content-more offset screenshot
(62.73 KB, image/png)
2023-11-08 11:12 PST
,
zalan
no flags
Details
[fast-cq]Patch
(5.94 KB, patch)
2023-11-08 20:22 PST
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-08 10:50:18 PST
<
rdar://problem/118128181
>
Aditya Keerthi
Comment 2
2023-11-08 10:50:23 PST
Created
attachment 468519
[details]
Screenshot
zalan
Comment 3
2023-11-08 11:11:36 PST
This is some offset gone wrong in bidi codepath. The longer the visually first content (1, 55555 etc) is, the more offset the visually trailing content (X) gains. <div style="outline: 1px solid green; writing-mode: vertical-rl; direction: rtl; margin-left: 100px;"><div style="display: inline-block;">X</div><span></span>1</div> <div style="outline: 1px solid green; writing-mode: vertical-rl; direction: rtl; margin-left: 100px;"><div style="display: inline-block;">X</div><span></span>55555</div> <div style="outline: 1px solid green; writing-mode: vertical-rl; direction: rtl; margin-left: 100px;"><div style="display: inline-block;">X</div><span></span>999999999</div>
zalan
Comment 4
2023-11-08 11:12:15 PST
Created
attachment 468520
[details]
longer content-more offset screenshot
zalan
Comment 5
2023-11-08 20:22:28 PST
Created
attachment 468528
[details]
[fast-cq]Patch
EWS
Comment 6
2023-11-09 05:32:05 PST
Committed
270442@main
(1a7f8f48b4c1): <
https://commits.webkit.org/270442@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468528
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug