[IFC] inline-block child preceded by an inline child has incorrect positioning in vertical writing modes with a right-to-left direction https://bugs.webkit.org/show_bug.cgi?id=264425 <rdar://problem/118128181>

Reviewed by Antti Koivisto.

Turn (half)logical left to visual on BoxGeometry too.

* LayoutTests/fast/text/rtl-vertical-text-misalign-with-inline-blocks-expected.html: Added.
* LayoutTests/fast/text/rtl-vertical-text-misalign-with-inline-blocks.html: Added.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::adjustVisualGeometryForDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::setLeftForWritingMode const):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.h:

Canonical link: https://commits.webkit.org/270442@main